--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ cssselect2==0.7.0
     # via svglib
 dj-database-url==0.5.0
     # via -r requirements.in
-django==3.2
+django==4.2.1
     # via
     #   -r requirements.in
     #   django-appconf
@@ -44,7 +44,7 @@ django-classy-tags==3.0.1
     #   -r requirements.in
     #   django-cms
     #   django-sekizai
-django-cms==3.11.0
+django-cms==3.11.3
     # via
     #   -r requirements.in
     #   djangocms-attributes-field
@@ -147,7 +147,7 @@ pillow==9.2.0
     #   reportlab
 pip-tools==6.8.0
     # via -r requirements.in
-psycopg2==2.8.5
+psycopg2==2.9.6
     # via -r requirements.in
 pyparsing==3.0.9
     # via packaging
@@ -185,7 +185,7 @@ unidecode==1.1.2
     # via django-filer
 urllib3==1.25.11
     # via botocore
-uwsgi==2.0.19.1
+#uwsgi==2.0.19.1
     # via -r requirements.in
 webencodings==0.5.1
     # via
@@ -200,3 +200,9 @@ whitenoise==5.2.0
 # The following packages are considered to be unsafe in a requirements file:
 # pip
 # setuptools
+
+
+django-htmx==1.14.0
+gunicorn==20.1.0
+djangocms-snippet==3.1.0
+django-favicon-plus-reloaded==1.1.5
