--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-asgiref==3.6.0
+asgiref==3.5.2
     # via django
 boto3==1.14.49
     # via -r requirements.in
@@ -44,7 +44,7 @@ django-classy-tags==3.0.1
     #   -r requirements.in
     #   django-cms
     #   django-sekizai
-django-cms==3.11.3
+django-cms==3.11.0
     # via
     #   -r requirements.in
     #   djangocms-attributes-field
@@ -140,14 +140,14 @@ packaging==21.3
     # via build
 pep517==0.13.0
     # via build
-pillow==9.5.0
+pillow==9.2.0
     # via
     #   djangocms-text-ckeditor
     #   easy-thumbnails
     #   reportlab
 pip-tools==6.8.0
     # via -r requirements.in
-psycopg2==2.9.6
+psycopg2==2.8.5
     # via -r requirements.in
 pyparsing==3.0.9
     # via packaging
@@ -169,7 +169,7 @@ six==1.16.0
     #   html5lib
     #   orderedmultidict
     #   python-dateutil
-sqlparse==0.4.4
+sqlparse==0.4.2
     # via django
 svglib==1.4.1
     # via easy-thumbnails
@@ -185,14 +185,14 @@ unidecode==1.1.2
     # via django-filer
 urllib3==1.25.11
     # via botocore
-#uwsgi==2.0.19.1
+uwsgi==2.0.19.1
     # via -r requirements.in
 webencodings==0.5.1
     # via
     #   cssselect2
     #   html5lib
     #   tinycss2
-wheel==0.40.0
+wheel==0.37.1
     # via pip-tools
 whitenoise==5.2.0
     # via -r requirements.in
@@ -200,10 +200,3 @@ whitenoise==5.2.0
 # The following packages are considered to be unsafe in a requirements file:
 # pip
 # setuptools
-
-
-django-htmx==1.14.0
-gunicorn==20.1.0
-djangocms-snippet==3.1.0
-django-favicon-plus-reloaded==1.1.5
-django-extensions==3.2.1
