--- a/requirements.override.txt
+++ b/requirements.override.txt
@@ -1,5 +1,8 @@
+django==3.2.19
 django-htmx==1.14.0
 gunicorn==20.1.0
 djangocms-snippet==3.1.0
 django-favicon-plus-reloaded==1.1.5
 django-extensions==3.2.1
+django-debug-toolbar==4.0.0
+django-redis==5.2.0
